<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Contacts</string>
    <string name="create_contact">+</string>
    <string name="contacts">Contacts</string>
    <string name="no_contacts">Press create contact\nto start adding your contacts!</string>
    <string name="title_activity_create_contact">Create/ Edit Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_contact">Create New Contact</string>
    <string name="name">Name</string>
    <string name="mobile_phone">Mobile number</string>
    <string name="home_phone">Home phone number</string>
    <string name="work_phone">Work phone number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="add_to_fav">Add to favourites</string>
    <string name="create">Create</string>
    <string name="title_activity_fav_contacts">FavContactsActivity</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
